[package]
name = "lj_glass_tda"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Molina Burgos"]
description = "LJ Glass-forming system - TDA during vitrification"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-complex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
